[package]
name = "router"
version = "0.1.0"
authors = ["Benedikt Radtke <benediktradtke@gmail.com>"]
edition = "2018"

#[build]
#rustflags = ["-C target-feature=-neon"]

[dependencies]
register = "0.5.*"
#virtio_macros = { path = "../virtio_macros" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
